--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <body>
     <!--Navbar-->
     <header>
-      <nav class="navbar navbar-default">
-        <div class="container-fluid">
+      <nav class="navbar navbar-default nav-margin-btn-0">
+        <div class="container-fluid container-padding-0">
            <div class="row">
              <div class="col-xs-12">
                <!-- Brand and toggle get grouped for better mobile display -->
@@ -59,13 +59,53 @@
       </nav>
     </header>
 
-    <main class="">
+    <main class="hero">
 		<div class="container-fluid">
 			<div class="row">
         <div class="col-xs-12">
-          <div class="">
+          <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+            <!-- Indicadores -->
+            <ol class="carousel-indicators">
+              <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+              <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+            </ol>
 
-  				</div>
+            <!-- slider -->
+            <div class="carousel-inner" role="listbox">
+              <div class="item active">
+                <img src="assets/images/1.jpg" alt="1">
+                <div class="carousel-caption">
+                  <h3>Especialistas</h3>
+                  <p>en soluciones de monitoreo y consultoría</p>
+                </div>
+              </div>
+              <div class="item">
+                <img src="assets/images/2.jpg" alt="2">
+                <div class="carousel-caption">
+                  <h3>...</h3>
+                  <p>...</p>
+                </div>
+              </div>
+              <div class="item">
+                <img src="assets/images/3.jpg" alt="3">
+                <div class="carousel-caption">
+                  <h3>...</h3>
+                  <p>...</p>
+                </div>
+              </div>
+            </div>
+
+            <!-- Controles -->
+            <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+              <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              <span class="sr-only">Previous</span>
+            </a>
+            <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+              <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+              <span class="sr-only">Next</span>
+            </a>
+          </div>
         </div>
 		 	</div>
 		</div>
