Modificando estilos en carrusel versión movile

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -74,21 +74,21 @@
 
                <!-- slider -->
                <div class="carousel-inner" role="listbox">
-                 <div class="item active">
+                 <div class="item active height-img-movile">
                    <img src="assets/images/1.jpg" alt="1">
                       <div class="carousel-caption">
                         <h3>Especialistas</h3>
                         <p>en soluciones de monitoreo y consultoría</p>
                       </div>
                     </div>
-                  <div class="item">
+                  <div class="item height-img-movile">
                     <img src="assets/images/2.jpg" alt="2">
                       <div class="carousel-caption">
                         <h3>...</h3>
                         <p>...</p>
                       </div>
                     </div>
-                    <div class="item">
+                    <div class="item height-img-movile">
                       <img src="assets/images/3.jpg" alt="3">
                       <div class="carousel-caption">
                         <h3>...</h3>
@@ -110,7 +110,7 @@
               </div>
 		 	       </div>
 		        </div>
-	         </section>
+	        </section>
 
     <script type="text/javascript" src="vendors/jQuery/jquery-3.2.1.min.js"></script>
     <script ype="text/javascript" src="js/bootstrap.js"></script>
