Añadiendo nuevas secciones

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <body>
     <!--Navbar-->
     <header>
-      <nav class="navbar navbar-default nav-margin-btn-0 padding-nav">
+      <nav class="navbar navbar-default nav-margin-btn-0 padding-nav navbar-fixed-top">
         <div class="container-fluid">
            <div class="row">
              <div class="col-xs-12">
@@ -75,21 +75,21 @@
                <!-- slider -->
                <div class="carousel-inner" role="listbox">
                  <div class="item active height-img-movile">
-                   <img src="assets/images/1.jpg" alt="1">
+                   <img src="assets/images/1.jpg" alt="1" class="img-responsive">
                       <div class="carousel-caption">
                         <h3>Especialistas</h3>
                         <p>en soluciones de monitoreo y consultoría</p>
                       </div>
                     </div>
                   <div class="item height-img-movile">
-                    <img src="assets/images/2.jpg" alt="2">
+                    <img src="assets/images/2.jpg" alt="2" class="img-responsive">
                       <div class="carousel-caption">
                         <h3>...</h3>
                         <p>...</p>
                       </div>
                     </div>
                     <div class="item height-img-movile">
-                      <img src="assets/images/3.jpg" alt="3">
+                      <img src="assets/images/3.jpg" alt="3" class="img-responsive">
                       <div class="carousel-caption">
                         <h3>...</h3>
                         <p>...</p>
@@ -111,6 +111,121 @@
 		 	       </div>
 		        </div>
 	        </section>
+
+          <!--Segunda sección-->
+          <section class="margin-section">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-lg-4">
+                  <div class="content-box-section2">
+                    <div id="shaped"></div>
+                    <div class="content">
+                       <h2>Lorem ipsum dolor</h2>
+                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec nunc gravida, hendrerit nisl in, pretium tellus. In in nisl imperdiet, commodo diam a, vestibulum purus. Integer at diam quis tellus vulputate dapibus sit amet sed neque. Ut eget luctus mi.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4">
+                  <div class="content-box-section2">
+                    <div id="shaped"></div>
+                    <div class="content">
+                       <h2>Lorem ipsum dolor</h2>
+                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec nunc gravida, hendrerit nisl in, pretium tellus. In in nisl imperdiet, commodo diam a, vestibulum purus. Integer at diam quis tellus vulputate dapibus sit amet sed neque. Ut eget luctus mi.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-4">
+                  <div class="content-box-section2">
+                    <div id="shaped"></div>
+                    <div class="content">
+                       <h2>Lorem ipsum dolor</h2>
+                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec nunc gravida, hendrerit nisl in, pretium tellus. In in nisl imperdiet, commodo diam a, vestibulum purus. Integer at diam quis tellus vulputate dapibus sit amet sed neque. Ut eget luctus mi.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+
+          <hr class="featurette-divider">
+
+          <!--Tercera sección-->
+          <section>
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-lg-4">
+                  <div class="">
+                    <h2 class="center-align">"Especialistas en soluciones de monitoreo y consultoría"</h2>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+
+          <hr class="featurette-divider">
+
+          <!--Cuarta sección-->
+          <section class="margin-section">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-lg-4">
+                  <div class="content-box flex-direction-column">
+                    <img class="img-circle" src="assets/images/circle.jpg" alt="Imagen genérica de marcador de posición" width="140" height="140">
+                    <h2>Título</h2>
+                    <p>Donec sed odio dui.Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestíbulo en eros. Praesent commodo cursus magna.</p>
+                    <p><a class="btn btn-default" href="#" role="button">Ver detalles</a></p>
+                  </div>
+                </div>
+                <div class="col-lg-4">
+                  <div class="content-box  flex-direction-column">
+                    <img class="img-circle" src="assets/images/circle.jpg" alt="Imagen genérica de marcador de posición" width="140" height="140">
+                    <h2>Título</h2>
+                    <p>Donec sed odio dui.Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestíbulo en eros. Praesent commodo cursus magna.</p>
+                    <p><a class="btn btn-default" href="#" role="button">Ver detalles</a></p>
+                  </div>
+                </div>
+                <div class="col-lg-4">
+                  <div class="content-box  flex-direction-column">
+                    <img class="img-circle" src="assets/images/circle.jpg" alt="Imagen genérica de marcador de posición" width="140" height="140">
+                    <h2>Título</h2>
+                    <p>Donec sed odio dui.Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestíbulo en eros. Praesent commodo cursus magna.</p>
+                    <p><a class="btn btn-default" href="#" role="button">Ver detalles</a></p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
+
+          <hr class="featurette-divider">
+          <!--Quinta sección-->
+          <section>
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-lg-4">
+                  <h1 class="center-align">Nuestros patrocinadores</h1>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-lg-4 flex-direction-column">
+                  <img class="img-circle img-responsive" src="assets/images/circle.png" alt="Imagen genérica de marcador de posición"  width="140" height="140">
+                </div>
+                <div class="col-lg-4 flex-direction-column">
+                  <img class="img-circle img-responsive" src="assets/images/circle.png" alt="Imagen genérica de marcador de posición"  width="140" height="140">
+                </div>
+                <div class="col-lg-4 flex-direction-column">
+                  <img class="img-circle img-responsive" src="assets/images/circle.png" alt="Imagen genérica de marcador de posición"  width="140" height="140">
+                </div>
+              </div>
+            </div>
+          </section>
+
+          <footer>
+            <div class="container-fluid">
+              <div class="row">
+                
+              </div>
+            </div>
+          </footer>
 
     <script type="text/javascript" src="vendors/jQuery/jquery-3.2.1.min.js"></script>
     <script ype="text/javascript" src="js/bootstrap.js"></script>
