Agregando estilos de primer maquetado

--- a/index.html
+++ b/index.html
@@ -219,10 +219,59 @@
             </div>
           </section>
 
-          <footer>
+          <hr class="featurette-divider">
+
+          <footer class="content-box">
             <div class="container-fluid">
               <div class="row">
-                
+                <div class="col-lg-4">
+                  <ul class="list-style-none ulf-padding-btm">
+                    <h4 class="font-weight">Por qué Gib-Solutions</h4>
+                    <br>
+                    <li>
+                      <a href="#" class="color-links-footer">
+                        <p>Nosotros</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#" class="color-links-footer">
+                        <p>Sobre Gib-Solutions</p>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-lg-4">
+                  <ul class="list-style-none ulf-padding-btm">
+                    <h4 class="font-weight">Nuestros servicios</h4>
+                    <br>
+                    <li>
+                      <a href="#" class="color-links-footer">
+                        <p>Servicio 1</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#" class="color-links-footer">
+                        <p>Servicio 2</p>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
+                <div class="col-lg-4">
+                  <ul class="list-style-none ulf-padding-btm">
+                    <h4 class="font-weight">Nuestros servicios</h4>
+                    <br>
+                    <li>
+                      <a href="#" class="color-links-footer">
+                        <p>Servicio 1</p>
+                      </a>
+                    </li>
+                    <li>
+                      <a href="#" class="color-links-footer">
+                        <p>Servicio 2</p>
+                      </a>
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </footer>
