Modificando responsive en 768px

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           <section class="margin-section">
             <div class="container-fluid">
               <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-sm-12">
                   <div class="content-box-section2">
                     <div id="shaped"></div>
                     <div class="content">
@@ -125,7 +125,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-sm-12">
                   <div class="content-box-section2">
                     <div id="shaped"></div>
                     <div class="content">
@@ -134,7 +134,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-sm-12">
                   <div class="content-box-section2">
                     <div id="shaped"></div>
                     <div class="content">
@@ -168,7 +168,7 @@
           <section class="margin-section">
             <div class="container-fluid">
               <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-sm-12">
                   <div class="content-box flex-direction-column">
                     <img class="img-circle" src="assets/images/circle.jpg" alt="Imagen genérica de marcador de posición" width="140" height="140">
                     <h2>Título</h2>
@@ -176,7 +176,7 @@
                     <p><a class="btn btn-default" href="#" role="button">Ver detalles</a></p>
                   </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-sm-12">
                   <div class="content-box  flex-direction-column">
                     <img class="img-circle" src="assets/images/circle.jpg" alt="Imagen genérica de marcador de posición" width="140" height="140">
                     <h2>Título</h2>
@@ -184,7 +184,7 @@
                     <p><a class="btn btn-default" href="#" role="button">Ver detalles</a></p>
                   </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-sm-12">
                   <div class="content-box  flex-direction-column">
                     <img class="img-circle" src="assets/images/circle.jpg" alt="Imagen genérica de marcador de posición" width="140" height="140">
                     <h2>Título</h2>
@@ -206,13 +206,13 @@
                 </div>
               </div>
               <div class="row">
-                <div class="col-lg-4 flex-direction-column">
+                <div class="col-lg-4 col-sm-4 flex-direction-column">
                   <img class="img-circle img-responsive" src="assets/images/circle.png" alt="Imagen genérica de marcador de posición"  width="140" height="140">
                 </div>
-                <div class="col-lg-4 flex-direction-column">
+                <div class="col-lg-4 col-sm-4 flex-direction-column">
                   <img class="img-circle img-responsive" src="assets/images/circle.png" alt="Imagen genérica de marcador de posición"  width="140" height="140">
                 </div>
-                <div class="col-lg-4 flex-direction-column">
+                <div class="col-lg-4 col-sm-4 flex-direction-column">
                   <img class="img-circle img-responsive" src="assets/images/circle.png" alt="Imagen genérica de marcador de posición"  width="140" height="140">
                 </div>
               </div>
