--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                 <div class="col-lg-4 col-sm-12">
                   <div class="content-box-section2">
                     <div id="shaped"></div>
-                    <div class="content">
+                    <div class="content content-box">
                        <h2>Lorem ipsum dolor</h2>
                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec nunc gravida, hendrerit nisl in, pretium tellus. In in nisl imperdiet, commodo diam a, vestibulum purus. Integer at diam quis tellus vulputate dapibus sit amet sed neque. Ut eget luctus mi.</p>
                     </div>
@@ -128,7 +128,7 @@
                 <div class="col-lg-4 col-sm-12">
                   <div class="content-box-section2">
                     <div id="shaped"></div>
-                    <div class="content">
+                    <div class="content content-box">
                        <h2>Lorem ipsum dolor</h2>
                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec nunc gravida, hendrerit nisl in, pretium tellus. In in nisl imperdiet, commodo diam a, vestibulum purus. Integer at diam quis tellus vulputate dapibus sit amet sed neque. Ut eget luctus mi.</p>
                     </div>
@@ -137,7 +137,7 @@
                 <div class="col-lg-4 col-sm-12">
                   <div class="content-box-section2">
                     <div id="shaped"></div>
-                    <div class="content">
+                    <div class="content content-box">
                        <h2>Lorem ipsum dolor</h2>
                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec nunc gravida, hendrerit nisl in, pretium tellus. In in nisl imperdiet, commodo diam a, vestibulum purus. Integer at diam quis tellus vulputate dapibus sit amet sed neque. Ut eget luctus mi.</p>
                     </div>
@@ -153,10 +153,8 @@
           <section>
             <div class="container-fluid">
               <div class="row">
-                <div class="col-lg-4">
-                  <div class="">
-                    <h2 class="center-align">"Especialistas en soluciones de monitoreo y consultoría"</h2>
-                  </div>
+                <div class="col-lg-12">
+                  <h2 class="center-align">"Especialistas en soluciones de monitoreo y consultoría"</h2>
                 </div>
               </div>
             </div>
@@ -168,7 +166,7 @@
           <section class="margin-section">
             <div class="container-fluid">
               <div class="row">
-                <div class="col-lg-4 col-sm-12">
+                <div class="col-lg-4 col-sm-12 col-md-4">
                   <div class="content-box flex-direction-column">
                     <img class="img-circle" src="assets/images/circle.jpg" alt="Imagen genérica de marcador de posición" width="140" height="140">
                     <h2>Título</h2>
@@ -176,7 +174,7 @@
                     <p><a class="btn btn-default" href="#" role="button">Ver detalles</a></p>
                   </div>
                 </div>
-                <div class="col-lg-4 col-sm-12">
+                <div class="col-lg-4 col-sm-12 col-md-4">
                   <div class="content-box  flex-direction-column">
                     <img class="img-circle" src="assets/images/circle.jpg" alt="Imagen genérica de marcador de posición" width="140" height="140">
                     <h2>Título</h2>
@@ -184,7 +182,7 @@
                     <p><a class="btn btn-default" href="#" role="button">Ver detalles</a></p>
                   </div>
                 </div>
-                <div class="col-lg-4 col-sm-12">
+                <div class="col-lg-4 col-sm-12 col-md-4">
                   <div class="content-box  flex-direction-column">
                     <img class="img-circle" src="assets/images/circle.jpg" alt="Imagen genérica de marcador de posición" width="140" height="140">
                     <h2>Título</h2>
@@ -201,8 +199,9 @@
           <section>
             <div class="container-fluid">
               <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-12">
                   <h1 class="center-align">Nuestros patrocinadores</h1>
+                  <br>
                 </div>
               </div>
               <div class="row">
@@ -224,7 +223,7 @@
           <footer class="content-box">
             <div class="container-fluid">
               <div class="row">
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-4">
                   <ul class="list-style-none ulf-padding-btm">
                     <h4 class="font-weight">Por qué Gib-Solutions</h4>
                     <br>
@@ -240,7 +239,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-4">
                   <ul class="list-style-none ulf-padding-btm">
                     <h4 class="font-weight">Nuestros servicios</h4>
                     <br>
@@ -256,7 +255,7 @@
                     </li>
                   </ul>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 col-md-4">
                   <ul class="list-style-none ulf-padding-btm">
                     <h4 class="font-weight">Nuestros servicios</h4>
                     <br>
