--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   </head>
   <body>
     <!--Navbar-->
-    <header>
-      <nav class="navbar navbar-default nav-margin-btn-0 padding-nav navbar-fixed-top">
+    <header class="header">
+      <nav id="navbar" class="navbar navbar-default nav-margin-btn-0 padding-nav navbar-fixed-top">
         <div class="container-fluid">
            <div class="row">
              <div class="col-xs-12">
