--- a/index.html
+++ b/index.html
@@ -36,21 +36,14 @@
                <div class="navbar-collapse bs-example-js-navbar-collapse collapse" aria-expanded="false">
                  <ul class="nav navbar-nav navbar-right">
                    <li class="dropdown">
-                     <a href="#" class="dropdown-toggle" id="drop1" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Por qué Gib-Solutions <span class="caret"></span> </a>
+                     <a href="#" class="dropdown-toggle black" id="drop1" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Por qué Gib-Solutions <span class="caret"></span> </a>
                      <ul class="dropdown-menu" aria-labelledby="drop1">
-                        <li><a href="#">Sobre Gib-Solutions</a></li>
-                        <li><a href="#">Nosotros</a></li>
+                        <li><a href="#" class="black">Sobre Gib-Solutions</a></li>
+                        <li><a href="#" class="black">¿Quiénes somos?</a></li>
                       </ul>
                    </li>
-                   <li class="dropdown">
-                     <a href="#" class="dropdown-toggle" id="drop1" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Nuestros servicios <span class="caret"></span> </a>
-                     <ul class="dropdown-menu" aria-labelledby="drop1">
-                        <li><a href="#">1</a></li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                      </ul>
-                   </li>
-                   <li><a href="#">Contáctenos</a></li>
+                   <li><a href="#" class="black">Nuestros servicios y productos</a></li>
+                   <li><a href="#" class="black">Contáctenos</a></li>
                  </ul>
                </div>
              </div>
@@ -69,27 +62,19 @@
               <ol class="carousel-indicators">
                 <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
                 <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
                </ol>
 
                <!-- slider -->
                <div class="carousel-inner" role="listbox">
                  <div class="item active height-img-movile">
-                   <img src="assets/images/1.jpg" alt="1" class="img-responsive">
+                   <img src="assets/images/monitoreo1.jpg" alt="imagen 1" class="img-responsive">
                       <div class="carousel-caption">
                         <h3>Especialistas</h3>
                         <p>en soluciones de monitoreo y consultoría</p>
                       </div>
                     </div>
                   <div class="item height-img-movile">
-                    <img src="assets/images/2.jpg" alt="2" class="img-responsive">
-                      <div class="carousel-caption">
-                        <h3>...</h3>
-                        <p>...</p>
-                      </div>
-                    </div>
-                    <div class="item height-img-movile">
-                      <img src="assets/images/3.jpg" alt="3" class="img-responsive">
+                    <img src="assets/images/monitoreo2.jpg" alt="imagen 2" class="img-responsive">
                       <div class="carousel-caption">
                         <h3>...</h3>
                         <p>...</p>
@@ -112,34 +97,26 @@
 		        </div>
 	        </section>
 
-          <!--Segunda sección-->
-          <section class="margin-section">
+          <!--Primera sección-->
+          <section class="margin-section content-box">
             <div class="container-fluid">
               <div class="row">
-                <div class="col-lg-4 col-sm-12">
-                  <div class="content-box-section2">
-                    <div id="shaped"></div>
-                    <div class="content content-box">
-                       <h2>Lorem ipsum dolor</h2>
-                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec nunc gravida, hendrerit nisl in, pretium tellus. In in nisl imperdiet, commodo diam a, vestibulum purus. Integer at diam quis tellus vulputate dapibus sit amet sed neque. Ut eget luctus mi.</p>
+                <div class="col-sm-12">
+                  <h1 class="center-align">Sobre Gib-Solutions</h1>
+                  <br>
+                </div>
+                <div class="flex-direction-column">
+                  <div class="col-xs-12 col-sm-6">
+                    <div class="content-box">
+                      <br>
+                      <p class="center-align">El principal valor de nuestra empresa está en el equipo de profesionales altamente calificados y su metodología de desarrollo y gestión, con aplicaciones propias e integración con socios de negocios.</p>
+                      <p class="center-align">Nuestros clientes son grandes corporaciones nacionales y multinacionales, que han depositado su confianza en los servicios de GIB, que se convierten en un socio estratégico en la construcción de indicadores de calidad y la satisfacción de sus clientes finales.</p>
                     </div>
                   </div>
-                </div>
-                <div class="col-lg-4 col-sm-12">
-                  <div class="content-box-section2">
-                    <div id="shaped"></div>
-                    <div class="content content-box">
-                       <h2>Lorem ipsum dolor</h2>
-                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec nunc gravida, hendrerit nisl in, pretium tellus. In in nisl imperdiet, commodo diam a, vestibulum purus. Integer at diam quis tellus vulputate dapibus sit amet sed neque. Ut eget luctus mi.</p>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-4 col-sm-12">
-                  <div class="content-box-section2">
-                    <div id="shaped"></div>
-                    <div class="content content-box">
-                       <h2>Lorem ipsum dolor</h2>
-                       <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas nec nunc gravida, hendrerit nisl in, pretium tellus. In in nisl imperdiet, commodo diam a, vestibulum purus. Integer at diam quis tellus vulputate dapibus sit amet sed neque. Ut eget luctus mi.</p>
+                  <div class="col-xs-12 col-sm-6">
+                    <div class="">
+                      <br>
+                      <img src="assets/images/monitoring.png" alt="Monitoreo" class="img-responsive border-radius">
                     </div>
                   </div>
                 </div>
@@ -147,129 +124,136 @@
             </div>
           </section>
 
-          <hr class="featurette-divider">
+          <!--Segunda sección-->
+          <section class="margin-section background-gray content-max-box">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="content-box">
+                  <div class="col-sm-12">
+                    <h1 class="center-align">¿Quiénes somos?</h1>
+                    <br>
+                  </div>
+                  <div class="col-sm-12">
+                    <p class="center-align">Hemos contribuido a la Industria por años, con la implantación de Soluciones y Servicios TI que apoyan los procesos de negocio, impulsando la adopción de mejores prácticas y estándares de la industria y desplegando nuestra experiencia regional mediante herramientas y/o servicios de la mano de nuestros Partners tecnológicos.</p>
+                    <p class="center-align">El Portafolio de Soluciones y Servicios de Mainsoft integra la tecnología de las casas de Software que representa, junto a las componentes de Consultoría y Servicios Profesionales desarrolladas en base marcos de referencia de la Industria y experiencia acumulada.</p>
+                    <p class="center-align">Mainsoft, fundada en Chile en 1993, cuenta con oficinas en Santiago de Chile, Lima, Perú y Buenos Aires, Argentina.</p>
+                    <p class="center-align">Trabajan hoy en el Grupo Mainsoft más de ochenta personas considerando las áreas de venta, preventa, implementación, soporte, consultoría y servicios. Una Dirección Regional con base en Chile y Country Managers locales, permiten una eficiente administración para una óptima atención a nuestros clientes.</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
 
           <!--Tercera sección-->
-          <section>
-            <div class="container-fluid">
-              <div class="row">
-                <div class="col-lg-12">
-                  <h2 class="center-align">"Especialistas en soluciones de monitoreo y consultoría"</h2>
-                </div>
-              </div>
-            </div>
-          </section>
-
-          <hr class="featurette-divider">
-
-          <!--Cuarta sección-->
           <section class="margin-section">
             <div class="container-fluid">
               <div class="row">
-                <div class="col-lg-4 col-sm-12 col-md-4">
-                  <div class="content-box flex-direction-column">
-                    <img class="img-circle" src="assets/images/circle.jpg" alt="Imagen genérica de marcador de posición" width="140" height="140">
-                    <h2>Título</h2>
-                    <p>Donec sed odio dui.Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestíbulo en eros. Praesent commodo cursus magna.</p>
-                    <p><a class="btn btn-default" href="#" role="button">Ver detalles</a></p>
+                <div class="col-sm-12">
+                  <h1 class="center-align">Nuestros objetivos</h1>
+                </div>
+                <div class="col-lg-4 col-sm-4">
+                  <div class="content-box-section3">
+                    <div class="content"> <!--content-box-->
+                      <div class="flex-direction-column">
+                        <img src="assets/images/mision.png" alt="Misión" width="140" height="140">
+                      </div>
+                       <h2 class="center-align">Misión</h2>
+                       <p class="center-align">Entregar métricas e indicadores para la gestión de calidad de los canales digitales y servicios de infraestructura tecnológica, que permitan realizar análisis para establecer y controlar los niveles de servicio, con el propósito de mejorar la satisfacción de los usuarios finales y contribuir al proceso de mejoramiento continuo.</p>
+                    </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-sm-12 col-md-4">
-                  <div class="content-box  flex-direction-column">
-                    <img class="img-circle" src="assets/images/circle.jpg" alt="Imagen genérica de marcador de posición" width="140" height="140">
-                    <h2>Título</h2>
-                    <p>Donec sed odio dui.Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestíbulo en eros. Praesent commodo cursus magna.</p>
-                    <p><a class="btn btn-default" href="#" role="button">Ver detalles</a></p>
+                <div class="col-lg-4 col-sm-4">
+                  <div class="content-box-section3">
+                    <div class="content">
+                      <div class="flex-direction-column">
+                        <img src="assets/images/mision.png" alt="Misión" width="140" height="140">
+                      </div>
+                       <h2 class="center-align">Visión</h2>
+                       <p class="center-align">Ser el ente certificador y referente de la industria TI de la calidad de los canales digitales mediante soluciones tecnológicas que mejoren la experiencia de los usuarios finales.</p>
+                    </div>
                   </div>
                 </div>
-                <div class="col-lg-4 col-sm-12 col-md-4">
-                  <div class="content-box  flex-direction-column">
-                    <img class="img-circle" src="assets/images/circle.jpg" alt="Imagen genérica de marcador de posición" width="140" height="140">
-                    <h2>Título</h2>
-                    <p>Donec sed odio dui.Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestíbulo en eros. Praesent commodo cursus magna.</p>
-                    <p><a class="btn btn-default" href="#" role="button">Ver detalles</a></p>
+                <div class="col-lg-4 col-sm-4">
+                  <div class="content-box-section3">
+                    <div class="content">
+                      <div class="flex-direction-column">
+                        <img src="assets/images/mision.png" alt="Misión" width="140" height="140">
+                      </div>
+                       <h2 class="center-align">Propósito</h2>
+                       <p class="center-align">Proveer a nuestros clientes la más completa información sobre la calidad de sus canales digitales: Medición de parámetros percibidos por usuarios finales mediante monitoreo sintético y metodología Atentus. Visibilidad de plataforma TI (infraestructura) y desempeño de aplicaciones (APM) Seguimiento y análisis de las conexiones de usuarios reales (RUM). Ayudar a los clientes para identificar y mejorar el funcionamiento de sus canales digitales y plataformas TI, para mejorar el desempeño de sus aplicaciones y la percepción de sus usuarios.</p>
+                    </div>
                   </div>
                 </div>
               </div>
             </div>
           </section>
 
-          <hr class="featurette-divider">
-          <!--Quinta sección-->
-          <section>
+          <!--Cuarta sección-->
+          <section class="margin-section background-gray content-max-box">
             <div class="container-fluid">
               <div class="row">
                 <div class="col-lg-12">
-                  <h1 class="center-align">Nuestros patrocinadores</h1>
+                  <h1 class="center-align">Nuestros clientes</h1>
                   <br>
                 </div>
               </div>
               <div class="row">
-                <div class="col-lg-4 col-sm-4 flex-direction-column">
-                  <img class="img-circle img-responsive" src="assets/images/circle.png" alt="Imagen genérica de marcador de posición"  width="140" height="140">
+                <div class="content-box flex-direction-column">
+                  <div class="col-lg-4 col-sm-4">
+                    <img src="assets/images/telefonica.png" alt="Logo Telefónica" class="img-responsive">
+                  </div>
+                  <div class="col-lg-4 col-sm-4">
+                    <img src="assets/images/ana.jpg" alt="Logo ANA" class="img-responsive">
+                  </div>
+                  <div class="col-lg-4 col-sm-4">
+                    <img src="assets/images/distriluz.png" alt="Logo Distriluz" class="img-responsive">
+                  </div>
                 </div>
-                <div class="col-lg-4 col-sm-4 flex-direction-column">
-                  <img class="img-circle img-responsive" src="assets/images/circle.png" alt="Imagen genérica de marcador de posición"  width="140" height="140">
-                </div>
-                <div class="col-lg-4 col-sm-4 flex-direction-column">
-                  <img class="img-circle img-responsive" src="assets/images/circle.png" alt="Imagen genérica de marcador de posición"  width="140" height="140">
+              </div>
+              <div class="row">
+                <div class="content-box flex-direction-column">
+                  <div class="col-lg-4 col-sm-4">
+                    <img src="assets/images/italtel.jpg" alt="Logo Italtel" class="img-responsive">
+                  </div>
+                  <div class="col-lg-4 col-sm-4">
+                    <img src="assets/images/newrelic.png" alt="Logo New Relic" class="img-responsive">
+                  </div>
+                  <div class="col-lg-4 col-sm-4">
+                    <img src="assets/images/sunarp.png" alt="Logo Sunarp" class="img-responsive">
+                  </div>
                 </div>
               </div>
             </div>
           </section>
 
-          <hr class="featurette-divider">
+          <section class="margin-section">
+            <div class="container-fluid">
+              <div class="row">
+                <div class="col-sm-12">
+                  <h1 class="center-align">Contáctenos</h1>
+                  <br>
+                </div>
+              </div>
+              <div class="row">
+                <div class="flex-direction-column">
+                  <div class="col-lg-4">
+                    <div class="card-contact">
+                      <h4 class="center-align">San Juan de Miraflores</h4>
+                      <h4 class="center-align">Lima - Perú</h4>
+                      <p class="center-align">Teléfono: 939113366</p>
+                      <p class="center-align">E-mail: contacto@gib-solutions.com</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </section>
 
           <footer class="content-box">
             <div class="container-fluid">
               <div class="row">
-                <div class="col-lg-4 col-md-4">
-                  <ul class="list-style-none ulf-padding-btm">
-                    <h4 class="font-weight">Por qué Gib-Solutions</h4>
-                    <br>
-                    <li>
-                      <a href="#" class="color-links-footer">
-                        <p>Nosotros</p>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#" class="color-links-footer">
-                        <p>Sobre Gib-Solutions</p>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-lg-4 col-md-4">
-                  <ul class="list-style-none ulf-padding-btm">
-                    <h4 class="font-weight">Nuestros servicios</h4>
-                    <br>
-                    <li>
-                      <a href="#" class="color-links-footer">
-                        <p>Servicio 1</p>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#" class="color-links-footer">
-                        <p>Servicio 2</p>
-                      </a>
-                    </li>
-                  </ul>
-                </div>
-                <div class="col-lg-4 col-md-4">
-                  <ul class="list-style-none ulf-padding-btm">
-                    <h4 class="font-weight">Nuestros servicios</h4>
-                    <br>
-                    <li>
-                      <a href="#" class="color-links-footer">
-                        <p>Servicio 1</p>
-                      </a>
-                    </li>
-                    <li>
-                      <a href="#" class="color-links-footer">
-                        <p>Servicio 2</p>
-                      </a>
-                    </li>
-                  </ul>
+                <div class="col-sm-12">
+                  <p class="center-align white">Copyright © GIB Solutions 2019</p>
                 </div>
               </div>
             </div>
