--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="theme-color" content="#6e268b"/>
     <!--Logo pequeño que estará ubciado en la pestaña-->
     <link rel="icon" type="image/png" href="assets/images/icon.png">
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- CSS bootstrap -->
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
     <!-- Mi css -->
@@ -36,14 +37,14 @@
                <div class="navbar-collapse bs-example-js-navbar-collapse collapse" aria-expanded="false">
                  <ul class="nav navbar-nav navbar-right">
                    <li class="dropdown">
-                     <a href="#" class="dropdown-toggle black" id="drop1" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> Por qué Gib-Solutions <span class="caret"></span> </a>
+                     <a href="#" class="dropdown-toggle blue" id="drop1" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><strong>Por qué Gib-Solutions</strong><span class="caret"></span> </a>
                      <ul class="dropdown-menu" aria-labelledby="drop1">
-                        <li><a href="#" class="black">Sobre Gib-Solutions</a></li>
-                        <li><a href="#" class="black">¿Quiénes somos?</a></li>
+                        <li><a href="#about-gib-solutions" class="blue"><strong>Sobre Gib-Solutions</strong></a></li>
+                        <li><a href="#about-us" class="blue"><strong>¿Quiénes somos?</strong></a></li>
                       </ul>
                    </li>
-                   <li><a href="#" class="black">Nuestros servicios y productos</a></li>
-                   <li><a href="#" class="black">Contáctenos</a></li>
+                   <li><a href="views/services-products.html" class="blue"><strong>Nuestros servicios y productos</strong></a></li>
+                   <li><a href="#contact-us" class="blue"><strong>Contáctenos</strong></a></li>
                  </ul>
                </div>
              </div>
@@ -98,23 +99,25 @@
 	        </section>
 
           <!--Primera sección-->
-          <section class="margin-section content-box">
+          <section class="margin-section content-box" id="about-gib-solutions">
             <div class="container-fluid">
               <div class="row">
                 <div class="col-sm-12">
                   <h1 class="center-align">Sobre Gib-Solutions</h1>
                   <br>
                 </div>
-                <div class="flex-direction-column">
-                  <div class="col-xs-12 col-sm-6">
+              </div>
+              <div class="row">
+                <div class="flex-direction">
+                  <div class="col-xs-12 col-lg-6">
                     <div class="content-box">
                       <br>
-                      <p class="center-align">El principal valor de nuestra empresa está en el equipo de profesionales altamente calificados y su metodología de desarrollo y gestión, con aplicaciones propias e integración con socios de negocios.</p>
-                      <p class="center-align">Nuestros clientes son grandes corporaciones nacionales y multinacionales, que han depositado su confianza en los servicios de GIB, que se convierten en un socio estratégico en la construcción de indicadores de calidad y la satisfacción de sus clientes finales.</p>
+                      <h4 class="center-align">El principal valor de nuestra empresa está en el equipo de profesionales altamente calificados y su metodología de desarrollo y gestión, con aplicaciones propias e integración con socios de negocios.</h4>
+                      <h4 class="center-align">Nuestros clientes son grandes corporaciones nacionales y multinacionales, que han depositado su confianza en los servicios de GIB, que se convierten en un socio estratégico en la construcción de indicadores de calidad y la satisfacción de sus clientes finales.</h4>
                     </div>
                   </div>
-                  <div class="col-xs-12 col-sm-6">
-                    <div class="">
+                  <div class="col-xs-12 col-lg-6">
+                    <div class="flex">
                       <br>
                       <img src="assets/images/monitoring.png" alt="Monitoreo" class="img-responsive border-radius">
                     </div>
@@ -125,7 +128,7 @@
           </section>
 
           <!--Segunda sección-->
-          <section class="margin-section background-gray content-max-box">
+          <section class="margin-section background-gray padding-second-section" id="about-us">
             <div class="container-fluid">
               <div class="row">
                 <div class="content-box">
@@ -133,12 +136,14 @@
                     <h1 class="center-align">¿Quiénes somos?</h1>
                     <br>
                   </div>
-                  <div class="col-sm-12">
-                    <p class="center-align">Hemos contribuido a la Industria por años, con la implantación de Soluciones y Servicios TI que apoyan los procesos de negocio, impulsando la adopción de mejores prácticas y estándares de la industria y desplegando nuestra experiencia regional mediante herramientas y/o servicios de la mano de nuestros Partners tecnológicos.</p>
-                    <p class="center-align">El Portafolio de Soluciones y Servicios de Mainsoft integra la tecnología de las casas de Software que representa, junto a las componentes de Consultoría y Servicios Profesionales desarrolladas en base marcos de referencia de la Industria y experiencia acumulada.</p>
-                    <p class="center-align">Mainsoft, fundada en Chile en 1993, cuenta con oficinas en Santiago de Chile, Lima, Perú y Buenos Aires, Argentina.</p>
-                    <p class="center-align">Trabajan hoy en el Grupo Mainsoft más de ochenta personas considerando las áreas de venta, preventa, implementación, soporte, consultoría y servicios. Una Dirección Regional con base en Chile y Country Managers locales, permiten una eficiente administración para una óptima atención a nuestros clientes.</p>
-                  </div>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col-sm-12 padding-second-section">
+                  <h4 class="center-align">Hemos contribuido a la Industria por años, con la implantación de Soluciones y Servicios TI que apoyan los procesos de negocio, impulsando la adopción de mejores prácticas y estándares de la industria y desplegando nuestra experiencia regional mediante herramientas y/o servicios de la mano de nuestros Partners tecnológicos.</h4>
+                  <h4 class="center-align">El Portafolio de Soluciones y Servicios de Mainsoft integra la tecnología de las casas de Software que representa, junto a las componentes de Consultoría y Servicios Profesionales desarrolladas en base marcos de referencia de la Industria y experiencia acumulada.</h4>
+                  <h4 class="center-align">Mainsoft, fundada en Chile en 1993, cuenta con oficinas en Santiago de Chile, Lima, Perú y Buenos Aires, Argentina.</h4>
+                  <h4 class="center-align">Trabajan hoy en el Grupo Mainsoft más de ochenta personas considerando las áreas de venta, preventa, implementación, soporte, consultoría y servicios. Una Dirección Regional con base en Chile y Country Managers locales, permiten una eficiente administración para una óptima atención a nuestros clientes.</h4>
                 </div>
               </div>
             </div>
@@ -198,27 +203,27 @@
                 </div>
               </div>
               <div class="row">
-                <div class="content-box flex-direction-column">
-                  <div class="col-lg-4 col-sm-4">
+                <div class="content-box flex-five-section">
+                  <div class="col-xs-12 col-lg-3 flex">
                     <img src="assets/images/telefonica.png" alt="Logo Telefónica" class="img-responsive">
                   </div>
-                  <div class="col-lg-4 col-sm-4">
+                  <div class="col-xs-12 col-lg-3 flex">
                     <img src="assets/images/ana.jpg" alt="Logo ANA" class="img-responsive">
                   </div>
-                  <div class="col-lg-4 col-sm-4">
+                  <div class="col-xs-12 col-lg-3 flex">
                     <img src="assets/images/distriluz.png" alt="Logo Distriluz" class="img-responsive">
                   </div>
                 </div>
               </div>
               <div class="row">
-                <div class="content-box flex-direction-column">
-                  <div class="col-lg-4 col-sm-4">
+                <div class="content-box flex-five-section">
+                  <div class="col-xs-12 col-lg-3 flex">
                     <img src="assets/images/italtel.jpg" alt="Logo Italtel" class="img-responsive">
                   </div>
-                  <div class="col-lg-4 col-sm-4">
+                  <div class="col-xs-12 col-lg-3 flex">
                     <img src="assets/images/newrelic.png" alt="Logo New Relic" class="img-responsive">
                   </div>
-                  <div class="col-lg-4 col-sm-4">
+                  <div class="col-xs-12 col-lg-3 flex">
                     <img src="assets/images/sunarp.png" alt="Logo Sunarp" class="img-responsive">
                   </div>
                 </div>
@@ -226,7 +231,7 @@
             </div>
           </section>
 
-          <section class="margin-section">
+          <section class="margin-section" id="contact-us">
             <div class="container-fluid">
               <div class="row">
                 <div class="col-sm-12">
@@ -238,10 +243,15 @@
                 <div class="flex-direction-column">
                   <div class="col-lg-4">
                     <div class="card-contact">
-                      <h4 class="center-align">San Juan de Miraflores</h4>
-                      <h4 class="center-align">Lima - Perú</h4>
-                      <p class="center-align">Teléfono: 939113366</p>
-                      <p class="center-align">E-mail: contacto@gib-solutions.com</p>
+                      <address>
+                        <strong class="center-align">Gib-Solutions</strong><br>
+                          San Juan de Miraflores<br>
+                          Lima - Perú<br>
+                          <abbr title="Phone">Tel: </abbr> 939 113 366
+                      </address>
+                      <address>
+                        <a href="mailto:#">contacto@gib-solutions.com</a>
+                      </address>
                     </div>
                   </div>
                 </div>
