--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                 <a class="navbar-brand pull-left" href="#"><img src="assets/images/logo.png" alt="Logo Gib-Solutions" class="logo-gib"></a>
+                 <a class="navbar-brand pull-left" href="#"><img src="assets/images/logo.jpg" alt="Logo Gib-Solutions" class="logo-gib img-responsive"></a>
                </div>
 
                <!-- Collect the nav links, forms, and other content for toggling -->
