Mejorando últimos estilos

--- a/index.html
+++ b/index.html
@@ -113,6 +113,7 @@
                     <div class="content-box">
                       <br>
                       <h4 class="center-align">El principal valor de nuestra empresa está en el equipo de profesionales altamente calificados y su metodología de desarrollo y gestión, con aplicaciones propias e integración con socios de negocios.</h4>
+                      <br>
                       <h4 class="center-align">Nuestros clientes son grandes corporaciones nacionales y multinacionales, que han depositado su confianza en los servicios de GIB, que se convierten en un socio estratégico en la construcción de indicadores de calidad y la satisfacción de sus clientes finales.</h4>
                     </div>
                   </div>
@@ -243,13 +244,13 @@
                 <div class="flex-direction-column">
                   <div class="col-lg-4">
                     <div class="card-contact">
-                      <address>
+                      <address class="center-align">
                         <strong class="center-align">Gib-Solutions</strong><br>
                           San Juan de Miraflores<br>
                           Lima - Perú<br>
                           <abbr title="Phone">Tel: </abbr> 939 113 366
                       </address>
-                      <address>
+                      <address class="center-align">
                         <a href="mailto:#">contacto@gib-solutions.com</a>
                       </address>
                     </div>
