--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="icon" type="image/png" href="assets/images/icon.png">
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
     <!-- CSS bootstrap -->
-    <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
     <!-- Mi css -->
     <link rel="stylesheet" type="text/css" href="css/main.css">
   </head>
@@ -30,7 +30,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                   </button>
-                 <a class="navbar-brand pull-left" href="#"><img src="assets/images/logo.jpg" alt="Logo Gib-Solutions" class="logo-gib img-responsive"></a>
+                 <a class="navbar-brand pull-left" href="index.html"><img src="assets/images/logo.jpg" alt="Logo Gib-Solutions" class="logo-gib img-responsive"></a>
                </div>
 
                <!-- Collect the nav links, forms, and other content for toggling -->
@@ -270,9 +270,9 @@
             </div>
           </footer>
 
-    <script type="text/javascript" src="vendors/jQuery/jquery-3.2.1.min.js"></script>
-    <script ype="text/javascript" src="js/bootstrap.js"></script>
-    <script ype="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="vendor/jQuery/jquery-3.2.1.min.js"></script>
+    <script ype="text/javascript" src="vendor/bootstrap/js/bootstrap.js"></script>
+    <script ype="text/javascript" src="vendor/bootstrap/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="js/app.js"></script>
   </body>
 </html>
